--- a/css/product_detail.css
+++ b/css/product_detail.css
@@ -1,31 +1,105 @@
 .product-detail{
-    display: flex;
+    width: 100%;
+    display: inline-block;
 }
-.imgs-prod{width: 60%;}
-#gallery_01{
-    width: 10%;
+.imgs-prod{
+    width: calc(100% - 390px);
+    display: flex;
+    justify-content: space-between;
     float: left;
 }
-#gallery_01 a{
+.gallery_01{
+    width: 5em;
+}
+.gallery_01 a{
     display: block;
     margin: .3em;
-}
-#gallery_01 img {
+    cursor: pointer;
     border: 1px solid rgb(190, 188, 188);
+}
+.gallery_01 a.more-img{position: relative;}
+.gallery_01 a.more-img::before{
+    content: "...";
+    background-color: rgb(0 0 0 / 63%);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    color: white;
+    font-size: 2em;
+    text-align: center;
+}
+.gallery_01 img {
     width: 100%;
 }
+.modal-body{
+    display: flex;
+    padding: 2rem 4rem 4rem;
+}
+.show-img{
+    width: calc(100% - 5rem);
+    text-align: center;
+}
+.list-imgs-modal{
+    width: 5rem;
+
+}
+.list-imgs-modal a{
+    display: block;
+    margin: .3em;
+    cursor: pointer;
+    border: 1px solid rgb(190, 188, 188);
+}
+.list-imgs-modal img{width: 100%;}
+.show-img-modal{
+    width: calc(100% - 5rem);
+    overflow: hidden;
+}
+.show-img-modal img{width: 100%;}
+
 /*Change the colour*/
-.active img {
+.active-imgs{
     border: 2px solid #a50034 !important;
 }
 .zoomMain{
-    width: 500px;
+    width: 90%;
+    cursor: zoom-in;
 }
+.imgs-prod-resp{
+    width: calc(100% - 390px);
+    float: left;
+    display: none !important;
+}
+.imgs-prod-resp-item{
+    display: flex;
+}
+.slick-dots{
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    margin-bottom: 2em;
+}
+.slick-dots li{
+    padding: 0 .5em;
+}
+li.slick-active button{background-color: black !important;}
+.slick-dots li button{
+    font-size: 0;
+    display: block;
+    padding: 3px;
+    cursor: pointer;
+    border: 0;
+    border-radius: 50%;
+    background-color: #ababab;
+}
+
 .info-prod-detail{
-    width: 40%;
+    width: 24em;
     font-size: 1rem;
+    float: right;
 }
-.info-prod-detail h4{margin-top: .5em;}
+.info-prod-detail h5{margin-top: .5em;}
 .star-prod{
     margin: 0;
     border: none;
@@ -57,7 +131,7 @@
     padding: 1em 0;
 }
 .price-prod-detail span{
-    font-size: 2em;
+    font-size: 1.6em;
 }
 .label-prod-detail .label-prod-item{
     border-top: 1px solid rgb(216, 213, 213);
@@ -70,6 +144,8 @@
     padding-right: .5em;
 }
 .label-prod-detail .label-prod-item span{font-size: .8em;}
+.hidden-info-min{display: none;}
+.hidden-info{display: block;}
 .add-cart{
     border-top: 1px solid rgb(216, 213, 213);
     border-bottom: 1px solid rgb(216, 213, 213);
@@ -79,4 +155,45 @@
     display: flex;
     font-size: .7em;
     padding: 1em 0;
+}
+
+nav.nav-options{
+    border-top: 1px solid #e4e4e4;
+    border-bottom: 1px solid #e4e4e4;
+    background-color: white;
+    padding: 0 2em;
+}
+nav.nav-options ul{
+    display: flex;
+    list-style: none;
+    margin: 0;
+    justify-content: space-between;
+}
+nav.nav-options ul li a{
+    color: #6b6b6b;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 1em 4em;
+}
+.active{
+    border-bottom:2px solid #a50034;
+    color: black !important;
+}
+
+@media only screen and (max-width:991px){
+    .imgs-prod-resp{display: block !important;}
+    .imgs-prod{display: none;}
+    .info-prod-detail{
+        width: 19em;
+        font-size: 1.2rem;
+    }
+}
+
+@media only screen and (max-width:767px){
+    .imgs-prod-resp{width: 100%;}
+    .info-prod-detail{width: 100%;}
+    .hidden-info-min{display: block;}
+    .hidden-info{display: none;}
 }
